src/components/ArticleCard/ArticleCard.css
.article-card {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.article-card-image-container {
  text-align: center;
  width: 100%;
  height: 12.5rem;
  align-self: stretch;
  object-fit: cover;
  width: 100%;
}

.article-card-image {
  width: 100%;
  height: 100%;
  border-radius: 0.75rem;
  object-fit: cover;
  object-position: top;
}

.article-card-content {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.article-card-info {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  align-self: stretch;
  gap: 1rem;
}

.article-card-title {
  font-size: 1.875rem;
}

.article-card-description {
  text-align: left;
  font-size: 1.125rem;
}

.article-card .button {
  max-width: 100%;
}

/* Tablet */
@media (min-width: 768px) and (max-width: 1023px) {
  .article-card {
    flex-direction: row;
  }

  .article-card-image-container {
    width: 12.5rem;
    min-height: 100%;
    align-self: stretch;
    object-position: top;
  }

  .article-card-content {
    width: 70%;
    gap: 2rem;
    flex: 1 0 0;
  }
}

/* Desktop */
@media (min-width: 1024px) {
  .article-card {
    flex-direction: row;
    gap: 7.8125rem;
  }

  .article-card-image-container {
    width: 29.9375rem;
    min-height: 100%;
    display: flex;
    object-fit: cover;
  }

  .article-card-content {
    flex-direction: column;
    width: 36.25rem;
  }
}

